# drpshadow

./: .gitignore  .gitmodules  README.md  pyproject.toml
models/bonsai-gnn-mdn-64-3-0.4-10-knn-20/: coords_transformer.pkl  loss_fn_state.pt  model_config.yaml  model_state.pt  optimizer_state.pt  power_transformer.pkl  scheduler_state.pt  target_transformer.pkl  validation_fn_state.pt
src/drpshadow/: __init__.py  bonsai.py  ethshadow.py  host.py  network.py  shadow.py  utils.py
src/drpshadow/network/: __init__.py  link.py  zone.py
tests/: message.py  node.js  package.json  parse_bootstrap_addr.py  parse_log.py  parse_message_log.py  parse_node_peerid.py  parse_pubkeys.py  pnpm-lock.yaml
tests/finality/: generate_bonsai.py  parse_finality_log.py
tests/finality/template/: admins.js  bootstrap_peers.js  node.js
tests/merge/: generate_ethshadow.py
tests/merge-0/: generate.py
tests/merge-0/template/: bootstrap.js  node.js
tests/merge/template/: bootstrap.js  node.js
tests/pubsub/: generate_bonsai.py  generate_bonsai_no_packet_loss.py  generate_ethshadow.py  parse.py
tests/pubsub-0/: generate.py  parse.py
tests/pubsub-0/template/: bootstrap.js  node.js
tests/pubsub-1/: generate.py  parse.py
tests/pubsub-1/template/: bootstrap.js  node.js
tests/pubsub/template/: bootstrap.js  node.js
tests/template/: bootstrap.js
